--- a/styles/globals/_buttons.scss
+++ b/styles/globals/_buttons.scss
@@ -6,3 +6,9 @@
     border-radius: 10px;
     border-style: none;
 }
+
+.tertiarybtn {
+    color: map-get($pry-colors, dark-red);
+    font-weight: 600;
+
+}
