--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -11,6 +11,7 @@
     background-size: cover;
     background-blend-mode: multiply;
     background-position: center;
+    margin-bottom: 10vh;
 
     .fold-area-section {
         width: 60%;
@@ -18,6 +19,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
 
 
 
@@ -65,6 +67,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
 }
 
 .sales-pitch {
@@ -77,6 +80,7 @@
     background-color: map-get($neutrals, light-red);
     border-radius: 10px;
     border: 0.5px solid map-get($pry-colors, bright-yellow);
+    margin-bottom: 120px;
 
     .yellow-line {
         height: 18vh;
@@ -90,8 +94,366 @@
         justify-content: center;
         align-items: center;
 
+
         h3 {
             color: map-get($pry-colors, dark-red);
         }
+    }
+}
+
+.recentcase {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    .recentcasecontrol {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .casecontrol {
+        width: 15%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+
+        div {
+            border-radius: 50%;
+            background-color: map-get($neutrals, light-yellow);
+            padding: 16px;
+            border: 0.5px solid map-get($pry-colors, bright-yellow);
+            display: none;
+        }
+    }
+
+    .news-section {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-top: 48px;
+
+        .news-post {
+            width: 45%;
+            height: 50vh;
+            background-color: map-get($neutrals, light-red);
+            padding: 32px 8px 16px 32px;
+            margin-right: 24px;
+            border: 0.1px solid map-get($pry-colors, dark-red);
+            border-radius: 10px;
+
+            .tertiarybtn {
+                margin-top: 48px;
+            }
+        }
+
+
+    }
+}
+
+.practice-area-section {
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+
+    .practice-areas-box {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin-bottom: 56px;
+        width: 80%;
+
+
+
+
+    }
+
+    .practice-areas {
+        width: 25%;
+        height: 40vh;
+        border: 0.5px solid map-get($pry-colors, dark-red);
+        border-radius: 15px;
+        margin-top: 48px;
+        padding-top: 32px;
+        margin-bottom: 24px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+
+        img {
+            height: 60px;
+            width: 60px;
+            margin-bottom: 24px;
+        }
+
+        h3 {
+            margin-bottom: 64px;
+        }
+    }
+}
+
+.our-team-section {
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: map-get($neutrals, light-red);
+    height: 40vh;
+    margin-bottom: 400px;
+
+    .our-team-title {
+        width: 80%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 32px;
+
+        .see-all-members {
+            width: 10%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: center;
+
+            img {
+                width: 24px;
+                height: 24px;
+            }
+
+            p {
+                color: map-get($pry-colors, dark-red);
+            }
+        }
+    }
+
+    .team-members-box {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        width: 85%;
+        margin-top: 56px;
+
+        .team-member {
+            width: 35%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            margin-bottom: 160px;
+            border-radius: 20px;
+            filter: drop-shadow(5px 5px 25px rgba(165, 28, 48, 0.07)) drop-shadow(-5px -5px 25px rgba(165, 28, 48, 0.07));
+
+
+            img {
+                width: 80%;
+                height: 40vh;
+                border-radius: 10px 10px 0 0;
+                filter: drop-shadow(5px 5px 25px rgba(165, 28, 48, 0.07)) drop-shadow(-5px -5px 25px rgba(165, 28, 48, 0.07));
+            }
+
+            .team-member-info {
+                background-color: map-get($neutrals, white);
+                width: 80%;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: center;
+                border-radius: 0 0 10px 10px;
+
+                p {
+                    margin-bottom: 8px;
+                    margin-top: 8px;
+                }
+
+                h3 {
+                    margin-bottom: 32px;
+                }
+            }
+
+        }
+    }
+}
+
+.testimonial-section {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 0 auto;
+    margin-bottom: 120px;
+
+    .testimonial-section-title {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+
+        .testimonial-section-navigation {
+            width: 10%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: center;
+
+
+            .testimonial-nav-box {
+                width: 25%;
+                border: 1px solid map-get($pry-colors, bright-yellow);
+                padding: 8px;
+                border-radius: 50%;
+                background-color: map-get($neutrals, light-red);
+                display: none;
+            }
+
+        }
+
+
+    }
+
+    .testimonial-box {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 48px;
+        width: 110%;
+
+
+        .testimonial-group {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: flex-start;
+            width: 50%;
+            border: 1px solid map-get($pry-colors, dark-red);
+            padding: 24px 8px;
+            margin-right: 24px;
+            background-color: map-get($neutrals, light-red);
+            border-radius: 10px;
+
+            .quote {
+                width: 24px;
+                height: 24px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                background-color: map-get($pry-colors, dark-red);
+                color: map-get($neutrals, white);
+                // margin-right: 4px;
+                border-radius: 50%;
+
+
+
+            }
+
+            .testimonial-info {
+                // width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+                width: 80%;
+
+                .client-info {
+                    margin-top: 24px;
+
+                    .client {
+                        font-weight: 700;
+                    }
+
+                    .client-role {
+                        color: map-get($pry-colors, light-black);
+                    }
+                }
+
+
+
+
+
+
+            }
+        }
+    }
+
+
+
+}
+
+.customers-section {
+    margin: 120px auto 96px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 80%;
+
+    h2 {
+        margin-bottom: 48px;
+    }
+
+    .customer-logo-group {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 100%;
+
+        .customer-logo {
+            border: 1px solid map-get($pry-colors, dark-red);
+            border-radius: 8px;
+            margin-right: 5%;
+            margin-bottom: 32px;
+
+            img {
+                width: 180px;
+                height: 100px;
+                border-radius: 8px;
+
+            }
+        }
+    }
+
+}
+
+.unwinnable-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: map-get($neutrals, light-red);
+    padding-top: 64px;
+    padding-bottom: 64px;
+
+    h2 {
+        margin-bottom: 24px;
+    }
+
+    p {
+        margin-bottom: 32px;
+
+    }
+
+    h2+p {
+        margin-bottom: 8px;
+    }
+
+    .last-p {
+        width: 30%;
+        text-align: center;
     }
 }
