--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,6 +99,8 @@ header {
         color: #333333; }
         header nav ul li a:hover {
           text-decoration: underline 5px solid #a61c31; }
+    header nav .contact-btn {
+      text-decoration: none; }
 
 button {
   width: 10rem;
@@ -116,11 +118,15 @@ button {
   border-radius: 10px;
   border-style: none; }
 
+.tertiarybtn {
+  color: #a61c31;
+  font-weight: 600; }
+
 footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 10rem;
+  margin-top: 5rem;
   margin-bottom: 3rem; }
   footer .sales-hook {
     width: 18%;
@@ -176,7 +182,8 @@ footer {
   background: url("../images/sean-pollock-PhYq704ffdA-unsplash.jpg") #333333;
   background-size: cover;
   background-blend-mode: multiply;
-  background-position: center; }
+  background-position: center;
+  margin-bottom: 10vh; }
   .fold-area .fold-area-section {
     width: 60%;
     display: flex;
@@ -223,7 +230,8 @@ footer {
   height: 28vh;
   background-color: rgba(166, 28, 49, 0.07);
   border-radius: 10px;
-  border: 0.5px solid #e1b437; }
+  border: 0.5px solid #e1b437;
+  margin-bottom: 120px; }
   .sales-pitch .yellow-line {
     height: 18vh;
     width: 0.1%;
@@ -235,5 +243,249 @@ footer {
     align-items: center; }
     .sales-pitch .pitch-section h3 {
       color: #a61c31; }
+
+.recentcase {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start; }
+  .recentcase .recentcasecontrol {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; }
+  .recentcase .casecontrol {
+    width: 15%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center; }
+    .recentcase .casecontrol div {
+      border-radius: 50%;
+      background-color: rgba(225, 180, 55, 0.18);
+      padding: 16px;
+      border: 0.5px solid #e1b437;
+      display: none; }
+  .recentcase .news-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 48px; }
+    .recentcase .news-section .news-post {
+      width: 45%;
+      height: 50vh;
+      background-color: rgba(166, 28, 49, 0.07);
+      padding: 32px 8px 16px 32px;
+      margin-right: 24px;
+      border: 0.1px solid #a61c31;
+      border-radius: 10px; }
+      .recentcase .news-section .news-post .tertiarybtn {
+        margin-top: 48px; }
+
+.practice-area-section {
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center; }
+  .practice-area-section .practice-areas-box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 56px;
+    width: 80%; }
+  .practice-area-section .practice-areas {
+    width: 25%;
+    height: 40vh;
+    border: 0.5px solid #a61c31;
+    border-radius: 15px;
+    margin-top: 48px;
+    padding-top: 32px;
+    margin-bottom: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center; }
+    .practice-area-section .practice-areas img {
+      height: 60px;
+      width: 60px;
+      margin-bottom: 24px; }
+    .practice-area-section .practice-areas h3 {
+      margin-bottom: 64px; }
+
+.our-team-section {
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: rgba(166, 28, 49, 0.07);
+  height: 40vh;
+  margin-bottom: 400px; }
+  .our-team-section .our-team-title {
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 32px; }
+    .our-team-section .our-team-title .see-all-members {
+      width: 10%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center; }
+      .our-team-section .our-team-title .see-all-members img {
+        width: 24px;
+        height: 24px; }
+      .our-team-section .our-team-title .see-all-members p {
+        color: #a61c31; }
+  .our-team-section .team-members-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 85%;
+    margin-top: 56px; }
+    .our-team-section .team-members-box .team-member {
+      width: 35%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      margin-bottom: 160px;
+      border-radius: 20px;
+      filter: drop-shadow(5px 5px 25px rgba(165, 28, 48, 0.07)) drop-shadow(-5px -5px 25px rgba(165, 28, 48, 0.07)); }
+      .our-team-section .team-members-box .team-member img {
+        width: 80%;
+        height: 40vh;
+        border-radius: 10px 10px 0 0;
+        filter: drop-shadow(5px 5px 25px rgba(165, 28, 48, 0.07)) drop-shadow(-5px -5px 25px rgba(165, 28, 48, 0.07)); }
+      .our-team-section .team-members-box .team-member .team-member-info {
+        background-color: white;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        border-radius: 0 0 10px 10px; }
+        .our-team-section .team-members-box .team-member .team-member-info p {
+          margin-bottom: 8px;
+          margin-top: 8px; }
+        .our-team-section .team-members-box .team-member .team-member-info h3 {
+          margin-bottom: 32px; }
+
+.testimonial-section {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 0 auto;
+  margin-bottom: 120px; }
+  .testimonial-section .testimonial-section-title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%; }
+    .testimonial-section .testimonial-section-title .testimonial-section-navigation {
+      width: 10%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center; }
+      .testimonial-section .testimonial-section-title .testimonial-section-navigation .testimonial-nav-box {
+        width: 25%;
+        border: 1px solid #e1b437;
+        padding: 8px;
+        border-radius: 50%;
+        background-color: rgba(166, 28, 49, 0.07);
+        display: none; }
+  .testimonial-section .testimonial-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 48px;
+    width: 110%; }
+    .testimonial-section .testimonial-box .testimonial-group {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: flex-start;
+      width: 50%;
+      border: 1px solid #a61c31;
+      padding: 24px 8px;
+      margin-right: 24px;
+      background-color: rgba(166, 28, 49, 0.07);
+      border-radius: 10px; }
+      .testimonial-section .testimonial-box .testimonial-group .quote {
+        width: 24px;
+        height: 24px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #a61c31;
+        color: white;
+        border-radius: 50%; }
+      .testimonial-section .testimonial-box .testimonial-group .testimonial-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        width: 80%; }
+        .testimonial-section .testimonial-box .testimonial-group .testimonial-info .client-info {
+          margin-top: 24px; }
+          .testimonial-section .testimonial-box .testimonial-group .testimonial-info .client-info .client {
+            font-weight: 700; }
+          .testimonial-section .testimonial-box .testimonial-group .testimonial-info .client-info .client-role {
+            color: #4f4f4f; }
+
+.customers-section {
+  margin: 120px auto 96px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 80%; }
+  .customers-section h2 {
+    margin-bottom: 48px; }
+  .customers-section .customer-logo-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%; }
+    .customers-section .customer-logo-group .customer-logo {
+      border: 1px solid #a61c31;
+      border-radius: 8px;
+      margin-right: 5%;
+      margin-bottom: 32px; }
+      .customers-section .customer-logo-group .customer-logo img {
+        width: 180px;
+        height: 100px;
+        border-radius: 8px; }
+
+.unwinnable-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(166, 28, 49, 0.07);
+  padding-top: 64px;
+  padding-bottom: 64px; }
+  .unwinnable-section h2 {
+    margin-bottom: 24px; }
+  .unwinnable-section p {
+    margin-bottom: 32px; }
+  .unwinnable-section h2 + p {
+    margin-bottom: 8px; }
+  .unwinnable-section .last-p {
+    width: 30%;
+    text-align: center; }
 
 /*# sourceMappingURL=styles.css.map */
