Style edited on Contact form

--- a/styles/pages/_contact.scss
+++ b/styles/pages/_contact.scss
@@ -101,6 +101,10 @@
                 border-right: none;
                 width: 90%;
             }
+
+            textarea {
+                margin-bottom: 32px;
+            }
         }
     }
 }
