--- a/styles/styles.css
+++ b/styles/styles.css
@@ -684,5 +684,7 @@ hr {
         border-left: none;
         border-right: none;
         width: 90%; }
+      .contact-section .contact-form .form-entry textarea {
+        margin-bottom: 32px; }
 
 /*# sourceMappingURL=styles.css.map */
