--- a/styles/globals/_typography.scss
+++ b/styles/globals/_typography.scss
@@ -10,6 +10,22 @@ body {
         line-height: 3rem;
 
         color: map-get($pry-colors, white);
+
+        @media (max-width: 480px) {
+            font: {
+                size: 1.5rem;
+            }
+
+            line-height: 2rem;
+        }
+
+        @media (min-width: 481px) and (max-width: 760px) {
+            font: {
+                size: 2rem;
+            }
+
+            line-height: 2.5rem;
+        }
     }
 
     h2 {
@@ -21,6 +37,24 @@ body {
         line-height: 2.5rem;
 
         color: map-get($neutrals, dark-black);
+
+        @media (max-width: 480px) {
+            font: {
+                size: 1.8rem;
+            }
+
+            line-height: 1rem;
+
+
+        }
+
+        @media (min-width: 481px) and (max-width: 760px) {
+            font: {
+                size: 1.8rem;
+            }
+
+            line-height: 1.5rem;
+        }
     }
 
     h3 {
@@ -32,6 +66,22 @@ body {
         line-height: 2.3rem;
 
         color: map-get($neutrals, dark-black);
+
+        @media (max-width: 480px) {
+            font: {
+                size: 1.25rem;
+            }
+
+            line-height: 1rem;
+        }
+
+        @media (min-width: 481px) and (max-width: 760px) {
+            font: {
+                size: 1.25rem;
+            }
+
+            line-height: 1.5rem;
+        }
     }
 
     h4 {
@@ -43,6 +93,22 @@ body {
         line-height: 1.9rem;
 
         color: map-get($neutrals, dark-black);
+
+        @media (max-width: 480px) {
+            font: {
+                size: 1.125rem;
+            }
+
+            line-height: 1.25rem;
+        }
+
+        @media (min-width: 481px) and (max-width: 760px) {
+            font: {
+                size: 1.25rem;
+            }
+
+            line-height: 1.25rem;
+        }
     }
 
     p {
@@ -52,16 +118,32 @@ body {
         }
 
 
-        line-height: 1.9rem;
+        line-height: 1.5rem;
 
         color: map-get($neutrals, light-black);
+
+        @media (max-width: 480px) {
+            line-height: 1.2rem;
+        }
     }
 
     button {
         font: {
             family: "Lato", sans-serif;
             size: 1.125rem;
-            weight: 500;
+            weight: 700;
+        }
+
+        @media (max-width: 480px) {
+            font: {
+                size: 1.25rem;
+            }
+        }
+
+        @media (min-width: 481px) and (max-width: 760px) {
+            font: {
+                size: 1.125rem;
+            }
         }
     }
 
