--- a/styles/pages/_about.scss
+++ b/styles/pages/_about.scss
@@ -6,12 +6,48 @@
     margin: 160px auto 120px auto;
     width: 80%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: flex-start;
+
     align-items: flex-start;
 
+    @media (max-width: 480px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    @media (min-width: 481px) and (max-width: 960px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+    }
+
     .promo-info {
-        width: 45%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        @media (max-width: 480px) {
+            width: 75%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+
+        }
+
+        @media (min-width: 480px) and (max-width: 960px) {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            width: 100%;
+        }
 
         h1 {
             margin-bottom: 16px;
@@ -20,7 +56,47 @@
         p {
             margin-bottom: 24px;
         }
+
+        .promo-infotext {
+            width: 50%;
+
+            @media (max-width: 480px) {
+                width: 100%;
+            }
+
+            @media (min-width: 481px) and (max-width: 900px) {
+                width: 70%;
+            }
+
+
+        }
+
+        .promo-video {
+            @media (max-width: 480px) {
+                iframe {
+                    width: 100%;
+                    height: 100%;
+                    margin-bottom: 32px;
+                }
+
+
+
+            }
+
+            @media (min-width: 481px) and (max-width: 960px) {
+
+                width: 70%;
+                margin-bottom: 32px;
+
+                iframe {
+                    width: 100%;
+                    height: 300px;
+                }
+            }
+        }
     }
+
+
 
 }
 
@@ -33,12 +109,55 @@
     flex-direction: row;
     justify-content: space-between;
 
+    @media (max-width: 480px) {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        margin-top: 48px;
+
+    }
+
+    @media (min-width: 481px) and (max-width: 900px) {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        margin-top: 48px;
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+
+
     .promo-image {
+
+        @media (max-width: 480px) {
+            width: 80%;
+            height: 80%;
+        }
+
+        @media (min-width: 481px) and (max-width: 900px) {
+            width: 100%;
+            height: 100%;
+        }
 
         img {
             width: 80%;
             height: 90%;
+
+            @media (max-width: 480px) {
+                width: 100%;
+                height: 100%;
+            }
+
+            @media (min-width: 481px) and (max-width: 900px) {
+                width: 100%;
+                height: 100%;
+                margin-bottom: 24px;
+            }
         }
+
+
     }
 
     .promo-info2 {
@@ -51,6 +170,30 @@
         p {
             margin-bottom: 24px;
         }
+
+        @media (max-width: 480px) {
+            width: 80%;
+
+            h2 {
+                margin-top: 24px;
+                line-height: 2rem;
+            }
+        }
+
+        @media (min-width: 481px) and (max-width: 900px) {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+
+
+            h2 {
+
+                margin-top: 8px;
+                line-height: 2rem;
+            }
+        }
     }
 }
 
@@ -58,11 +201,34 @@
     width: 80%;
     margin: 0 auto 120px auto;
 
+    @media (max-width: 480px) {
+        width: 60%;
+        margin: 56px auto 56px auto;
+    }
+
+    @media (min-width: 481px) and (max-width: 900px) {
+        width: 50%;
+    }
+
     .history-cards {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         margin-top: 32px;
+
+        @media (max-width: 480px) {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        @media (min-width: 481px) and (max-width: 900px) {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
 
         .history-card {
             width: 25%;
@@ -72,6 +238,16 @@
             display: flex;
             justify-content: center;
             align-items: flex-start;
+
+            @media (max-width: 480px) {
+                width: 80%;
+                margin-bottom: 32px;
+            }
+
+            @media (min-width: 481px) and (max-width: 900px) {
+                width: 80%;
+                margin-bottom: 32px;
+            }
 
             ul {
                 list-style-type: disc;
@@ -90,6 +266,24 @@
     width: 80%;
     margin: 0 auto 120px auto;
 
+    @media (max-width: 480px) {
+        width: 60%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        margin-bottom: 64px;
+    }
+
+    @media (min-width: 481px) and (max-width: 900px) {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        margin-bottom: 64px;
+    }
+
 
 
 
@@ -100,6 +294,20 @@
         justify-content: space-between;
         margin-top: 32px;
 
+        @media (max-width: 480px) {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        @media (min-width: 481px) and (max-width: 900px) {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
         .value-card {
             display: flex;
             flex-direction: column;
@@ -109,6 +317,16 @@
             border: 0.5px solid map-get($pry-colors, dark-red);
             border-radius: 8px;
             padding: 24px;
+
+            @media (max-width: 480px) {
+                width: 80%;
+                margin-bottom: 32px;
+            }
+
+            @media (min-width: 481px) and (max-width: 900px) {
+                width: 80%;
+                margin-bottom: 32px;
+            }
 
             .value-card-title {
                 display: flex;
@@ -134,12 +352,29 @@
     justify-content: flex-start;
     align-items: center;
 
+    @media (max-width: 480px) {
+        margin-bottom: 64px;
+    }
+
     .management-team-members {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         margin-top: 32px;
-        // margin-bottom: 48px;
+
+        @media (max-width: 480px) {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+        @media (min-width: 481px) and (max-width: 900px) {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+        }
 
         .team-member {
             width: 35%;
@@ -150,6 +385,14 @@
             margin-bottom: 72px;
             border-radius: 20px;
             filter: drop-shadow(5px 5px 25px rgba(146, 117, 121, 0.07)) drop-shadow(-5px -5px 25px rgba(129, 83, 90, 0.07));
+
+            @media (max-width: 480px) {
+                width: 80%;
+            }
+
+            @media (min-width: 481px) and (max-width: 900px) {
+                width: 80%;
+            }
 
 
             img {
@@ -182,6 +425,8 @@
 
 
     }
+
+
 }
 
 hr {
