--- a/styles/pages/_contact.scss
+++ b/styles/pages/_contact.scss
@@ -76,6 +76,17 @@
                     border-left: none;
                     border-right: none;
                     width: 80%;
+
+
+                }
+
+                input:active {
+                    background-color: transparent;
+                    border: 2px solid map-get($pry-colors, dark-red);
+                    border-top: none;
+                    border-left: none;
+                    border-right: none;
+                    width: 90%;
                 }
             }
 
@@ -100,11 +111,66 @@
                 border-left: none;
                 border-right: none;
                 width: 90%;
+
+
+            }
+
+            input:active,
+            textarea:active {
+                background-color: transparent;
+                border: 2px solid map-get($pry-colors, dark-red);
+                border-top: none;
+                border-left: none;
+                border-right: none;
+                width: 90%;
             }
 
             textarea {
                 margin-bottom: 32px;
             }
         }
+    }
+
+    @media (max-width: 480px) {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        margin: 120px auto 96px auto;
+
+
+        .contact-info {
+            width: 80%;
+            margin-bottom: 56px;
+
+            .phone-contact {
+                width: 50%;
+            }
+        }
+
+        .contact-form {
+            width: 80%;
+            padding: 48px;
+        }
+    }
+
+    @media (min-width: 481px) and (max-width: 900px) {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        margin: 120px auto 96px auto;
+
+        .contact-info {
+            width: 75%;
+            margin-bottom: 56px;
+        }
+
+        .contact-form {
+            width: 80%;
+        }
+
     }
 }
