--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -13,12 +13,22 @@
     background-position: center;
     margin-bottom: 10vh;
 
+    @media (max-width: 480px) {
+        width: 100%;
+    }
+
     .fold-area-section {
         width: 60%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        @media (max-width: 480px) {
+            width: 100%;
+        }
+
+
 
 
 
@@ -39,6 +49,10 @@
             margin-top: -24px;
             padding-top: 40px;
             padding-bottom: 40px;
+
+            @media (max-width: 480px) {
+                width: 80%;
+            }
 
             h1 {
                 text-align: center;
@@ -67,6 +81,14 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    @media (max-width: 480px) {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
 
 }
 
